--- a/Loboteca/Loboteca/appsettings.json
+++ b/Loboteca/Loboteca/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "cadenaSQL": "Server=DESKTOP-RPECV9R; DataBase=Loboteca;Integrated Security= true"
+    "cadenaSQL": "Server=DESKTOP-5QIN7UP; DataBase=Loboteca;Integrated Security= true"
   },
   "Logging": {
     "LogLevel": {
